tags/2013-08-29_cppreference/Archive/1d129d208a4c7a34a871fe182eb5b172-25dabfc2c190f5ef027f31d968947336/output
main.cpp:8:23: error: variable has incomplete type 'decltype(foo(42))' (aka 'void')
    decltype(foo(42)) i;
                      ^
1 error generated.
